samples/_failures_safe/1761179271_cb692a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f7a0ad8.c: In function ‘main’:
./samples/SAFE/__tmp_8f7a0ad8.c:200:5: error: expected expression at end of input
  200 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_8f7a0ad8.c:200:5: error: expected declaration or statement at end of input
